[gd_scene load_steps=13 format=4 uid="uid://blifeufggpp6q"]

[ext_resource type="TileSet" uid="uid://76geueuuy7ht" path="res://new_tile_set.tres" id="1_wtcfe"]
[ext_resource type="Script" uid="uid://bda771n8l6bd1" path="res://flow_field4.gd" id="2_d21ai"]
[ext_resource type="Texture2D" uid="uid://cbllm8poymjj3" path="res://assets/player.png" id="4_0hol4"]
[ext_resource type="Script" uid="uid://bytdnce5m6xn7" path="res://spawner.gd" id="5_kdubu"]
[ext_resource type="Script" uid="uid://8kreceja8vt1" path="res://player.gd" id="5_q6r6c"]
[ext_resource type="PackedScene" uid="uid://btr582yosde8l" path="res://smooth_follower.tscn" id="6_d21ai"]
[ext_resource type="PackedScene" uid="uid://ck7vb870ddfxf" path="res://repeller.tscn" id="8_4d7sh"]
[ext_resource type="Script" uid="uid://cck74tileoheo" path="res://ui-controller.gd" id="8_rj586"]
[ext_resource type="PackedScene" uid="uid://c87xhj3vuojsx" path="res://attractor.tscn" id="9_4d7sh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4d7sh"]
bg_color = Color(0, 0, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ir8iy"]
bg_color = Color(0, 1, 0.183333, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hqns4"]
bg_color = Color(1, 0, 0, 1)

[node name="Node2D" type="Node2D"]

[node name="Walls" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAGAP//AAAAAAEAAAAHAP//AAAAAAEAAAAIAP//AAAAAAEAAAAJAP//AAAAAAEAAAAKAP//AAAAAAEAAAALAP//AAAAAAEAAAAMAP//AAAAAAEAAAANAP//AAAAAAEAAAAOAP//AAAAAAEAAAAPAP//AAAAAAEAAAAQAP//AAAAAAEAAAARAP//AAAAAAEAAAASAP//AAAAAAEAAAATAP//AAAAAAEAAAAUAP//AAAAAAEAAAAVAP//AAAAAAEAAAAWAP//AAAAAAEAAAAXAP//AAAAAAEAAAAYAP//AAAAAAEAAAAZAP//AAAAAAEAAAAaAP//AAAAAAEAAAAbAP//AAAAAAEAAAAcAP//AAAAAAEAAAAdAP//AAAAAAEAAAAeAP//AAAAAAEAAAAfAP//AAAAAAEAAAAgAP//AAAAAAEAAAAhAP//AAAAAAEAAAAiAP//AAAAAAEAAAAjAP//AAAAAAEAAAAkAP//AAAAAAEAAAAlAP//AAAAAAEAAAAmAP//AAAAAAEAAAAnAP//AAAAAAEAAAAoAP//AAAAAAEAAAApAP//AAAAAAEAAAAqAP//AAAAAAEAAAArAP//AAAAAAEAAAAsAP//AAAAAAEAAAAtAP//AAAAAAEAAAAuAP//AAAAAAEAAAAvAP//AAAAAAEAAAAwAP//AAAAAAEAAAAxAP//AAAAAAEAAAAyAP//AAAAAAEAAAAzAP//AAAAAAEAAAA0AP//AAAAAAEAAAA1AP//AAAAAAEAAAA2AP//AAAAAAEAAAA3AP//AAAAAAEAAAA4AP//AAAAAAEAAAA5AP//AAAAAAEAAAA6AP//AAAAAAEAAAA7AP//AAAAAAEAAAA8AP//AAAAAAEAAAA9AP//AAAAAAEAAAA+AP//AAAAAAEAAAA/AP//AAAAAAEAAABAAP//AAAAAAEAAAD//0AAAAAAAAEAAAD//z8AAAAAAAEAAAD//z4AAAAAAAEAAAD//z0AAAAAAAEAAAD//zwAAAAAAAEAAAD//zsAAAAAAAEAAAD//zoAAAAAAAEAAAD//zkAAAAAAAEAAAD//zgAAAAAAAEAAAD//zcAAAAAAAEAAAD//zYAAAAAAAEAAAD//zUAAAAAAAEAAAD//zQAAAAAAAEAAAD//zMAAAAAAAEAAAD//zIAAAAAAAEAAAD//zEAAAAAAAEAAAD//zAAAAAAAAEAAAD//y8AAAAAAAEAAAD//y4AAAAAAAEAAAD//y0AAAAAAAEAAAD//ywAAAAAAAEAAAD//ysAAAAAAAEAAAD//yoAAAAAAAEAAAD//ykAAAAAAAEAAAD//ygAAAAAAAEAAAD//ycAAAAAAAEAAAD//yYAAAAAAAEAAAD//yUAAAAAAAEAAAD//yQAAAAAAAEAAAD//yMAAAAAAAEAAAD//yIAAAAAAAEAAAD//yEAAAAAAAEAAAD//yAAAAAAAAEAAAD//x8AAAAAAAEAAAD//x4AAAAAAAEAAAD//x0AAAAAAAEAAAD//xwAAAAAAAEAAAD//xsAAAAAAAEAAAD//xoAAAAAAAEAAAD//xkAAAAAAAEAAAD//xgAAAAAAAEAAAD//xcAAAAAAAEAAAD//xYAAAAAAAEAAAD//xUAAAAAAAEAAAD//xQAAAAAAAEAAAD//xMAAAAAAAEAAAD//xIAAAAAAAEAAAD//xEAAAAAAAEAAAD//xAAAAAAAAEAAAD//w8AAAAAAAEAAAD//w4AAAAAAAEAAAD//w0AAAAAAAEAAAD//wwAAAAAAAEAAAD//wsAAAAAAAEAAAD//woAAAAAAAEAAAD//wkAAAAAAAEAAAD//wgAAAAAAAEAAAD//wcAAAAAAAEAAAD//wYAAAAAAAEAAAD//wUAAAAAAAEAAAD//wQAAAAAAAEAAAD//wMAAAAAAAEAAAD//wIAAAAAAAEAAAD//wEAAAAAAAEAAAD//wAAAAAAAAEAAAAFAP//AAAAAAEAAAAEAP//AAAAAAEAAAADAP//AAAAAAEAAAACAP//AAAAAAEAAAABAP//AAAAAAEAAAAAAP//AAAAAAEAAAD/////AAAAAAEAAAAAAEAAAAAAAAEAAAABAEAAAAAAAAEAAAACAEAAAAAAAAEAAAADAEAAAAAAAAEAAAAEAEAAAAAAAAEAAAAFAEAAAAAAAAEAAAAGAEAAAAAAAAEAAAAHAEAAAAAAAAEAAAAIAEAAAAAAAAEAAAAJAEAAAAAAAAEAAAAKAEAAAAAAAAEAAAALAEAAAAAAAAEAAAAMAEAAAAAAAAEAAAANAEAAAAAAAAEAAAAOAEAAAAAAAAEAAAAPAEAAAAAAAAEAAAAQAEAAAAAAAAEAAAARAEAAAAAAAAEAAAASAEAAAAAAAAEAAAATAEAAAAAAAAEAAAAUAEAAAAAAAAEAAAAVAEAAAAAAAAEAAAAWAEAAAAAAAAEAAAAXAEAAAAAAAAEAAAAYAEAAAAAAAAEAAAAZAEAAAAAAAAEAAAAaAEAAAAAAAAEAAAAbAEAAAAAAAAEAAAAcAEAAAAAAAAEAAAAdAEAAAAAAAAEAAAAeAEAAAAAAAAEAAAAfAEAAAAAAAAEAAAAgAEAAAAAAAAEAAAAhAEAAAAAAAAEAAAAiAEAAAAAAAAEAAAAjAEAAAAAAAAEAAAAkAEAAAAAAAAEAAAAlAEAAAAAAAAEAAAAmAEAAAAAAAAEAAAAnAEAAAAAAAAEAAAAoAEAAAAAAAAEAAAApAEAAAAAAAAEAAAAqAEAAAAAAAAEAAAArAEAAAAAAAAEAAAAsAEAAAAAAAAEAAAAtAEAAAAAAAAEAAAAuAEAAAAAAAAEAAAAvAEAAAAAAAAEAAAAwAEAAAAAAAAEAAAAxAEAAAAAAAAEAAAAyAEAAAAAAAAEAAAAzAEAAAAAAAAEAAAA0AEAAAAAAAAEAAAA1AEAAAAAAAAEAAAA2AEAAAAAAAAEAAAA3AEAAAAAAAAEAAAA4AEAAAAAAAAEAAAA5AEAAAAAAAAEAAAA6AEAAAAAAAAEAAAA7AEAAAAAAAAEAAAA8AEAAAAAAAAEAAAA9AEAAAAAAAAEAAAA+AEAAAAAAAAEAAAA/AEAAAAAAAAEAAABAAEAAAAAAAAEAAABAAAAAAAAAAAEAAABAAAEAAAAAAAEAAABAAAIAAAAAAAEAAABAAAMAAAAAAAEAAABAAAQAAAAAAAEAAABAAAUAAAAAAAEAAABAAAYAAAAAAAEAAABAAAcAAAAAAAEAAABAAAgAAAAAAAEAAABAAAkAAAAAAAEAAABAAAoAAAAAAAEAAABAAAsAAAAAAAEAAABAAAwAAAAAAAEAAABAAA0AAAAAAAEAAABAAA4AAAAAAAEAAABAAA8AAAAAAAEAAABAABAAAAAAAAEAAABAABEAAAAAAAEAAABAABIAAAAAAAEAAABAABMAAAAAAAEAAABAABQAAAAAAAEAAABAABUAAAAAAAEAAABAABYAAAAAAAEAAABAABcAAAAAAAEAAABAABgAAAAAAAEAAABAABkAAAAAAAEAAABAABoAAAAAAAEAAABAABsAAAAAAAEAAABAABwAAAAAAAEAAABAAB0AAAAAAAEAAABAAB4AAAAAAAEAAABAAB8AAAAAAAEAAABAACAAAAAAAAEAAABAACEAAAAAAAEAAABAACIAAAAAAAEAAABAACMAAAAAAAEAAABAACQAAAAAAAEAAABAACUAAAAAAAEAAABAACYAAAAAAAEAAABAACcAAAAAAAEAAABAACgAAAAAAAEAAABAACkAAAAAAAEAAABAACoAAAAAAAEAAABAACsAAAAAAAEAAABAACwAAAAAAAEAAABAAC0AAAAAAAEAAABAAC4AAAAAAAEAAABAAC8AAAAAAAEAAABAADAAAAAAAAEAAABAADEAAAAAAAEAAABAADIAAAAAAAEAAABAADMAAAAAAAEAAABAADQAAAAAAAEAAABAADUAAAAAAAEAAABAADYAAAAAAAEAAABAADcAAAAAAAEAAABAADgAAAAAAAEAAABAADkAAAAAAAEAAABAADoAAAAAAAEAAABAADsAAAAAAAEAAABAADwAAAAAAAEAAABAAD0AAAAAAAEAAABAAD4AAAAAAAEAAABAAD8AAAAAAAEAAAAAADUAAAAAAAEAAAABADUAAAAAAAEAAAACADUAAAAAAAEAAAADADUAAAAAAAEAAAAMAD8AAAAAAAEAAAAMAD4AAAAAAAEAAAAMAD0AAAAAAAEAAAAMADwAAAAAAAEAAAAMADsAAAAAAAEAAAAMADoAAAAAAAEAAAAMADkAAAAAAAEAAAAMADUAAAAAAAEAAAAMADYAAAAAAAEAAAAMADcAAAAAAAEAAAAMADgAAAAAAAEAAAALADUAAAAAAAEAAAAaADIAAAAAAAEAAAAbADIAAAAAAAEAAAAcADIAAAAAAAEAAAAdADIAAAAAAAEAAAAeADIAAAAAAAEAAAAfADIAAAAAAAEAAAAgADIAAAAAAAEAAAAhADIAAAAAAAEAAAAiADIAAAAAAAEAAAAjADIAAAAAAAEAAAAjACoAAAAAAAEAAAAiACoAAAAAAAEAAAAdACoAAAAAAAEAAAAcACoAAAAAAAEAAAAbACoAAAAAAAEAAAAaACoAAAAAAAEAAAAaACsAAAAAAAEAAAAaACwAAAAAAAEAAAAaADEAAAAAAAEAAAAaADAAAAAAAAEAAAAaACkAAAAAAAEAAAAaACgAAAAAAAEAAAAaACcAAAAAAAEAAAAaACYAAAAAAAEAAAAaACUAAAAAAAEAAAAaACQAAAAAAAEAAAAaACMAAAAAAAEAAAAaACIAAAAAAAEAAAAaACEAAAAAAAEAAAAaACAAAAAAAAEAAAAbACAAAAAAAAEAAAAcACAAAAAAAAEAAAAdACAAAAAAAAEAAAAeACAAAAAAAAEAAAAfACAAAAAAAAEAAAAgACAAAAAAAAEAAAAhACAAAAAAAAEAAAAiACAAAAAAAAEAAAAjACAAAAAAAAEAAAAkACAAAAAAAAEAAAAkACoAAAAAAAEAAAAlACoAAAAAAAEAAAAmACoAAAAAAAEAAAAnACoAAAAAAAEAAAAoACoAAAAAAAEAAAApACoAAAAAAAEAAAAqACoAAAAAAAEAAAArACoAAAAAAAEAAAAsACoAAAAAAAEAAAAsACkAAAAAAAEAAAAsACgAAAAAAAEAAAAsACcAAAAAAAEAAAAsACYAAAAAAAEAAAAsACUAAAAAAAEAAAAsACQAAAAAAAEAAAAsACMAAAAAAAEAAAAsACIAAAAAAAEAAAAsACEAAAAAAAEAAAAsACAAAAAAAAEAAAArACAAAAAAAAEAAAAqACAAAAAAAAEAAAAeADMAAAAAAAEAAAAeADQAAAAAAAEAAAAeADUAAAAAAAEAAAAeADYAAAAAAAEAAAAeADcAAAAAAAEAAAAeADgAAAAAAAEAAAAeADkAAAAAAAEAAAAeADoAAAAAAAEAAAAeADsAAAAAAAEAAAAeADwAAAAAAAEAAAAeAD0AAAAAAAEAAAAeAD4AAAAAAAEAAAAeAD8AAAAAAAEAAAAkADIAAAAAAAEAAAAlADIAAAAAAAEAAAAmADIAAAAAAAEAAAAnADIAAAAAAAEAAAAoADIAAAAAAAEAAAApADIAAAAAAAEAAAAqADIAAAAAAAEAAAArADIAAAAAAAEAAAAsADIAAAAAAAEAAAAtADIAAAAAAAEAAAAuADIAAAAAAAEAAAAvADIAAAAAAAEAAAA5ADIAAAAAAAEAAAA6ADIAAAAAAAEAAAA7ADIAAAAAAAEAAAA8ADIAAAAAAAEAAAA9ADIAAAAAAAEAAAA+ADIAAAAAAAEAAAA/ADIAAAAAAAEAAAAtACAAAAAAAAEAAAAuACAAAAAAAAEAAAAvACAAAAAAAAEAAAAwACAAAAAAAAEAAAAxACAAAAAAAAEAAAAyACAAAAAAAAEAAAAzACAAAAAAAAEAAAA0ACAAAAAAAAEAAAA1ACAAAAAAAAEAAAA2ACAAAAAAAAEAAAA3ACAAAAAAAAEAAAA4ACAAAAAAAAEAAAA5ACAAAAAAAAEAAAA6ACAAAAAAAAEAAAA7ACAAAAAAAAEAAAA8ACAAAAAAAAEAAAA9ACAAAAAAAAEAAAA+ACAAAAAAAAEAAAA/ACAAAAAAAAEAAAAtACoAAAAAAAEAAAAuACoAAAAAAAEAAAAvACoAAAAAAAEAAAAwACoAAAAAAAEAAAAxACoAAAAAAAEAAAAyACoAAAAAAAEAAAAzACoAAAAAAAEAAAA7ACoAAAAAAAEAAAA8ACoAAAAAAAEAAAA9ACoAAAAAAAEAAAA+ACoAAAAAAAEAAAA/ACoAAAAAAAEAAAArADMAAAAAAAEAAAArADQAAAAAAAEAAAArADUAAAAAAAEAAAArADYAAAAAAAEAAAArADcAAAAAAAEAAAArADgAAAAAAAEAAAArADkAAAAAAAEAAAAqADkAAAAAAAEAAAApADkAAAAAAAEAAAAoADkAAAAAAAEAAAAoADoAAAAAAAEAAAAoADsAAAAAAAEAAAAoAD8AAAAAAAEAAAAhAAYAAAAAAAEAAAAhAAcAAAAAAAEAAAAhAAgAAAAAAAEAAAAhAAkAAAAAAAEAAAAhAAoAAAAAAAEAAAAhAAsAAAAAAAEAAAAhAAwAAAAAAAEAAAAhAA0AAAAAAAEAAAAhAA4AAAAAAAEAAAAhAA8AAAAAAAEAAAAhABAAAAAAAAEAAAAhABEAAAAAAAEAAAAhABIAAAAAAAEAAAAhABMAAAAAAAEAAAAhABQAAAAAAAEAAAAiAAYAAAAAAAEAAAAiAAcAAAAAAAEAAAAiAAgAAAAAAAEAAAAiAAkAAAAAAAEAAAAiAAoAAAAAAAEAAAAiAAsAAAAAAAEAAAAiAAwAAAAAAAEAAAAiAA0AAAAAAAEAAAAiAA4AAAAAAAEAAAAiAA8AAAAAAAEAAAAiABAAAAAAAAEAAAAiABEAAAAAAAEAAAAiABIAAAAAAAEAAAAiABMAAAAAAAEAAAAiABQAAAAAAAEAAAAjAAYAAAAAAAEAAAAjAAcAAAAAAAEAAAAjAAgAAAAAAAEAAAAjAAkAAAAAAAEAAAAjAAoAAAAAAAEAAAAjAAsAAAAAAAEAAAAjAAwAAAAAAAEAAAAjAA0AAAAAAAEAAAAjAA4AAAAAAAEAAAAjAA8AAAAAAAEAAAAjABAAAAAAAAEAAAAjABEAAAAAAAEAAAAjABIAAAAAAAEAAAAjABMAAAAAAAEAAAAjABQAAAAAAAEAAAAkAAYAAAAAAAEAAAAkAAcAAAAAAAEAAAAkAAgAAAAAAAEAAAAkAAkAAAAAAAEAAAAkAAoAAAAAAAEAAAAkAAsAAAAAAAEAAAAkAAwAAAAAAAEAAAAkAA0AAAAAAAEAAAAkAA4AAAAAAAEAAAAkAA8AAAAAAAEAAAAkABAAAAAAAAEAAAAkABEAAAAAAAEAAAAkABIAAAAAAAEAAAAkABMAAAAAAAEAAAAkABQAAAAAAAEAAAAlAAYAAAAAAAEAAAAlAAcAAAAAAAEAAAAlAAgAAAAAAAEAAAAlAAkAAAAAAAEAAAAlAAoAAAAAAAEAAAAlAAsAAAAAAAEAAAAlAAwAAAAAAAEAAAAlAA0AAAAAAAEAAAAlAA4AAAAAAAEAAAAlAA8AAAAAAAEAAAAlABAAAAAAAAEAAAAlABEAAAAAAAEAAAAlABIAAAAAAAEAAAAlABMAAAAAAAEAAAAlABQAAAAAAAEAAAAmAAYAAAAAAAEAAAAmAAcAAAAAAAEAAAAmAAgAAAAAAAEAAAAmAAkAAAAAAAEAAAAmAAoAAAAAAAEAAAAmAAsAAAAAAAEAAAAmAAwAAAAAAAEAAAAmAA0AAAAAAAEAAAAmAA4AAAAAAAEAAAAmABIAAAAAAAEAAAAmABMAAAAAAAEAAAAmABQAAAAAAAEAAAAnAAYAAAAAAAEAAAAnAAcAAAAAAAEAAAAnAAgAAAAAAAEAAAAnAAkAAAAAAAEAAAAnAAoAAAAAAAEAAAAnAAsAAAAAAAEAAAAnAAwAAAAAAAEAAAAnAA0AAAAAAAEAAAAnABIAAAAAAAEAAAAnABMAAAAAAAEAAAAnABQAAAAAAAEAAAAoAAYAAAAAAAEAAAAoAAcAAAAAAAEAAAAoAAgAAAAAAAEAAAAoAAkAAAAAAAEAAAAoAAoAAAAAAAEAAAAoAAsAAAAAAAEAAAAoAAwAAAAAAAEAAAAoAA0AAAAAAAEAAAAoABMAAAAAAAEAAAAoABQAAAAAAAEAAAApAAYAAAAAAAEAAAApAAcAAAAAAAEAAAApAAgAAAAAAAEAAAApAAkAAAAAAAEAAAApAAoAAAAAAAEAAAApAAsAAAAAAAEAAAApAAwAAAAAAAEAAAApAA0AAAAAAAEAAAApABMAAAAAAAEAAAApABQAAAAAAAEAAAAqAAYAAAAAAAEAAAAqAAcAAAAAAAEAAAAqAAgAAAAAAAEAAAAqAAkAAAAAAAEAAAAqAAoAAAAAAAEAAAAqAAsAAAAAAAEAAAAqAAwAAAAAAAEAAAAqAA0AAAAAAAEAAAAqABQAAAAAAAEAAAAHABwAAAAAAAEAAAAHAB0AAAAAAAEAAAAHAB4AAAAAAAEAAAAHAB8AAAAAAAEAAAAHACAAAAAAAAEAAAAIABwAAAAAAAEAAAAIAB0AAAAAAAEAAAAIAB4AAAAAAAEAAAAIAB8AAAAAAAEAAAAIACAAAAAAAAEAAAAJABwAAAAAAAEAAAAJAB0AAAAAAAEAAAAJAB4AAAAAAAEAAAAJAB8AAAAAAAEAAAAJACAAAAAAAAEAAAAKABwAAAAAAAEAAAAKAB0AAAAAAAEAAAAKAB4AAAAAAAEAAAAKAB8AAAAAAAEAAAAKACAAAAAAAAEAAAALABwAAAAAAAEAAAALAB0AAAAAAAEAAAALAB4AAAAAAAEAAAALAB8AAAAAAAEAAAALACAAAAAAAAEAAAAMABwAAAAAAAEAAAAMAB0AAAAAAAEAAAAMAB4AAAAAAAEAAAAMAB8AAAAAAAEAAAAMACAAAAAAAAEAAAANABwAAAAAAAEAAAANAB0AAAAAAAEAAAANAB4AAAAAAAEAAAANAB8AAAAAAAEAAAANACAAAAAAAAEAAAAOABwAAAAAAAEAAAAOAB0AAAAAAAEAAAAOAB4AAAAAAAEAAAAOAB8AAAAAAAEAAAAOACAAAAAAAAEAAAAPABwAAAAAAAEAAAAPAB0AAAAAAAEAAAAPAB4AAAAAAAEAAAAPAB8AAAAAAAEAAAAPACAAAAAAAAEAAAAQABwAAAAAAAEAAAAQAB0AAAAAAAEAAAAQAB4AAAAAAAEAAAAQAB8AAAAAAAEAAAAQACAAAAAAAAEAAAARABwAAAAAAAEAAAARAB0AAAAAAAEAAAARAB4AAAAAAAEAAAARAB8AAAAAAAEAAAARACAAAAAAAAEAAAASABwAAAAAAAEAAAASAB0AAAAAAAEAAAASAB4AAAAAAAEAAAASAB8AAAAAAAEAAAASACAAAAAAAAEAAAATABwAAAAAAAEAAAATAB0AAAAAAAEAAAATAB4AAAAAAAEAAAATAB8AAAAAAAEAAAATACAAAAAAAAEAAAAUABwAAAAAAAEAAAAUAB0AAAAAAAEAAAAUAB4AAAAAAAEAAAAUAB8AAAAAAAEAAAAUACAAAAAAAAEAAAACACkAAAAAAAEAAAACACoAAAAAAAEAAAACACsAAAAAAAEAAAACACwAAAAAAAEAAAACAC0AAAAAAAEAAAACAC4AAAAAAAEAAAACAC8AAAAAAAEAAAACADAAAAAAAAEAAAADACkAAAAAAAEAAAADACoAAAAAAAEAAAADACsAAAAAAAEAAAADACwAAAAAAAEAAAADAC0AAAAAAAEAAAADAC4AAAAAAAEAAAADAC8AAAAAAAEAAAADADAAAAAAAAEAAAAEACkAAAAAAAEAAAAEACoAAAAAAAEAAAAEACsAAAAAAAEAAAAEACwAAAAAAAEAAAAEAC0AAAAAAAEAAAAEAC4AAAAAAAEAAAAEAC8AAAAAAAEAAAAEADAAAAAAAAEAAAAFACkAAAAAAAEAAAAFACoAAAAAAAEAAAAFACsAAAAAAAEAAAAFACwAAAAAAAEAAAAFAC0AAAAAAAEAAAAFAC4AAAAAAAEAAAAFAC8AAAAAAAEAAAAFADAAAAAAAAEAAAAGACkAAAAAAAEAAAAGACoAAAAAAAEAAAAGACsAAAAAAAEAAAAGACwAAAAAAAEAAAAGAC0AAAAAAAEAAAAGAC4AAAAAAAEAAAAGAC8AAAAAAAEAAAAGADAAAAAAAAEAAAAHACkAAAAAAAEAAAAHACoAAAAAAAEAAAAHACsAAAAAAAEAAAAHACwAAAAAAAEAAAAHAC0AAAAAAAEAAAAHAC4AAAAAAAEAAAAHAC8AAAAAAAEAAAAHADAAAAAAAAEAAAAIACkAAAAAAAEAAAAIACoAAAAAAAEAAAAIACsAAAAAAAEAAAAIACwAAAAAAAEAAAAIAC0AAAAAAAEAAAAIAC4AAAAAAAEAAAAIAC8AAAAAAAEAAAAIADAAAAAAAAEAAAAJACkAAAAAAAEAAAAJACoAAAAAAAEAAAAJACsAAAAAAAEAAAAJACwAAAAAAAEAAAAJAC0AAAAAAAEAAAAJAC4AAAAAAAEAAAAJAC8AAAAAAAEAAAAJADAAAAAAAAEAAAAKACkAAAAAAAEAAAAKACoAAAAAAAEAAAAKACsAAAAAAAEAAAAKACwAAAAAAAEAAAAKAC0AAAAAAAEAAAAKAC4AAAAAAAEAAAAKAC8AAAAAAAEAAAAKADAAAAAAAAEAAAALACkAAAAAAAEAAAALACoAAAAAAAEAAAALACsAAAAAAAEAAAALACwAAAAAAAEAAAALAC0AAAAAAAEAAAALAC4AAAAAAAEAAAALAC8AAAAAAAEAAAALADAAAAAAAAEAAAArAA0AAAAAAAEAAAAsAA0AAAAAAAEAAAAtAA0AAAAAAAEAAAAuAA0AAAAAAAEAAAAvAA0AAAAAAAEAAAAwAA0AAAAAAAEAAAAxAA0AAAAAAAEAAAAyAA0AAAAAAAEAAAAzAA0AAAAAAAEAAAA0AA0AAAAAAAEAAAA1AA0AAAAAAAEAAAA2AA0AAAAAAAEAAAA3AA0AAAAAAAEAAAA4AA0AAAAAAAEAAAA5AA0AAAAAAAEAAAA6AA0AAAAAAAEAAAA7AA0AAAAAAAEAAAA8AA0AAAAAAAEAAAA9AA0AAAAAAAEAAAA+AA0AAAAAAAEAAAA/AA0AAAAAAAEAAAAsABQAAAAAAAEAAAAsABUAAAAAAAEAAAAsABYAAAAAAAEAAAAsABcAAAAAAAEAAAAsABgAAAAAAAEAAAAsAB0AAAAAAAEAAAAsAB4AAAAAAAEAAAAsAB8AAAAAAAEAAAArABQAAAAAAAEAAAA0ABMAAAAAAAEAAAA0ABQAAAAAAAEAAAA0ABUAAAAAAAEAAAA3ABMAAAAAAAEAAAA3ABQAAAAAAAEAAAA3ABUAAAAAAAEAAAAyABYAAAAAAAEAAAAzABcAAAAAAAEAAAA0ABcAAAAAAAEAAAA1ABcAAAAAAAEAAAA2ABcAAAAAAAEAAAA3ABcAAAAAAAEAAAA4ABcAAAAAAAEAAAA5ABYAAAAAAAEAAAA=")
tile_set = ExtResource("1_wtcfe")

[node name="VisMap" type="TileMapLayer" parent="."]
visible = false
tile_set = ExtResource("1_wtcfe")

[node name="FlowField" type="Node" parent="." node_paths=PackedStringArray("vis_map", "walls_map", "target")]
script = ExtResource("2_d21ai")
vis_map = NodePath("../VisMap")
walls_map = NodePath("../Walls")
target = NodePath("../Node2D")
update_time_interval = 1

[node name="Node2D" type="Sprite2D" parent="."]
position = Vector2(264, 142)
texture = ExtResource("4_0hol4")
script = ExtResource("5_q6r6c")

[node name="Camera2D" type="Camera2D" parent="Node2D"]
zoom = Vector2(2, 2)

[node name="Spawner" type="Node2D" parent="." groups=["spawner"]]
position = Vector2(26, 22)
script = ExtResource("5_kdubu")
follower_scene = ExtResource("6_d21ai")
flow_field_controller = NodePath("../FlowField")
spawn_rate = 0.1
total_spawns = 200

[node name="Spawner2" type="Node2D" parent="." groups=["spawner"]]
position = Vector2(17, 997)
script = ExtResource("5_kdubu")
follower_scene = ExtResource("6_d21ai")
flow_field_controller = NodePath("../FlowField")
spawn_rate = 0.1
total_spawns = 200

[node name="Spawner3" type="Node2D" parent="." groups=["spawner"]]
position = Vector2(974, 988)
script = ExtResource("5_kdubu")
follower_scene = ExtResource("6_d21ai")
flow_field_controller = NodePath("../FlowField")
spawn_rate = 0.1
total_spawns = 200

[node name="Spawner4" type="Node2D" parent="." groups=["spawner"]]
position = Vector2(981, 21)
script = ExtResource("5_kdubu")
follower_scene = ExtResource("6_d21ai")
flow_field_controller = NodePath("../FlowField")
spawn_rate = 0.1
total_spawns = 200

[node name="CanvasLayer2" type="CanvasLayer" parent="." node_paths=PackedStringArray("camera")]
script = ExtResource("8_rj586")
camera = NodePath("../Node2D/Camera2D")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HSlider" type="VSlider" parent="CanvasLayer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
min_value = 0.1
max_value = 4.0
step = 0.1
value = 1.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer2/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="CheckButton" type="CheckButton" parent="CanvasLayer2/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/h_separation = 10
text = "Toggle tilemap"

[node name="CheckButton2" type="CheckButton" parent="CanvasLayer2/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/h_separation = 10
text = "spawn enemies"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="bfs" type="VSlider" parent="CanvasLayer2/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_4d7sh")
max_value = 2.0
step = 0.1
value = 1.0

[node name="att" type="VSlider" parent="CanvasLayer2/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_ir8iy")
max_value = 2.0
step = 0.1
value = 1.0

[node name="rep" type="VSlider" parent="CanvasLayer2/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_hqns4")
max_value = 2.0
step = 0.1
value = 1.0

[node name="Repeller" parent="." instance=ExtResource("8_4d7sh")]
position = Vector2(158, 283)

[node name="Attractor" parent="." instance=ExtResource("9_4d7sh")]
position = Vector2(567, 430)

[connection signal="value_changed" from="CanvasLayer2/MarginContainer/HSlider" to="CanvasLayer2" method="_on_h_slider_value_changed"]
[connection signal="toggled" from="CanvasLayer2/MarginContainer/MarginContainer/VBoxContainer/CheckButton" to="CanvasLayer2" method="_on_check_button_toggled"]
[connection signal="toggled" from="CanvasLayer2/MarginContainer/MarginContainer/VBoxContainer/CheckButton2" to="CanvasLayer2" method="_on_check_button_2_toggled"]
[connection signal="value_changed" from="CanvasLayer2/MarginContainer/HBoxContainer/bfs" to="CanvasLayer2" method="_on_h_slider_2_value_changed"]
[connection signal="value_changed" from="CanvasLayer2/MarginContainer/HBoxContainer/att" to="CanvasLayer2" method="_on_att_value_changed"]
[connection signal="value_changed" from="CanvasLayer2/MarginContainer/HBoxContainer/rep" to="CanvasLayer2" method="_on_rep_value_changed"]
